# IntelliHAUS

./: .gitignore  .gitmodules  README.md  README.txt  dev_config.js  grammar_words_temp.txt  index.d.ts  index.js  index.js.map  index.ts  package.json  phrases.sps  production_config.js  project_1.html  sam_oswalt.txt  simple_recog.py  tsconfig.json  voice_node.py  voice_node.py.db  voice_node.py.fsg  voice_node.py.jsgf
Hub/: README.md  makefile
Light/: makefile
Motion/: makefile
Node/: makefile
Plug/: makefile
Temp/: makefile
common/: Communicator.cpp  Communicator.hpp  Exception.hpp  Packet.hpp
d3_projects/: decision.html  functions.js  newnode.html  onload.js  project_1.html  project_4.html  project_5.html  projects_3.html  result.html
intelliEARS/: hubComm.py  keyphrase.list  simple_recog.py
models/: datapoint.js  datastream.js  home.d.ts  home.js  home.js.map  home.ts  index.d.ts  index.js  index.js.map  index.ts  node.js  rule.js  user.d.ts  user.js  user.js.map  user.ts
onload_function_post_ver4/: functions.js  onload.js
routes/: customMiddleware.js  datapoint_route.js  datastream_route.js  home_route.js  index.js  node_route.js  public_routes.js  user_route.js
rule_evaluation/: index.js  long_polling.js  rule_evaluator.js
server/: README.md  dev_config.js  index.js  (+3 more)
thermostat/: Adafruit_CharacterOLED.cpp  Adafruit_CharacterOLED.h  CMakeLists.txt  EncoderWheel.cpp  EncoderWheel.hpp  Exceptions.hpp  Interface.cpp  Interface.hpp  Makefile  TempControl.cpp  TempControl.hpp  Thermometer.cpp  Thermometer.hpp  display_driver.py  thermostat.cpp
(+160 files in other folders)
